--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "private": "true",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "parcel index.html --open",
-        "build": "parcel build sdk.js",
+        "start": "parcel serve index.html",
+        "build": "parcel index.html",
+        "build:js": "parcel build sdk.js",
         "serve": "serve dist"
     },
     "keywords": [],
@@ -17,6 +18,7 @@
         "zoid": "^9.0.63"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.10"
+        "@babel/core": "^7.12.10",
+        "parcel-bundler": "^1.12.4"
     }
 }
