--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "private": "true",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "parcel serve index.html",
-        "build": "parcel index.html",
+        "dev": "parcel index.html",
+        "build": "parcel build index.html",
         "build:js": "parcel build sdk.js",
         "serve": "serve dist"
     },
