--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "private": "true",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "parcel index.html",
+        "dev": "parcel index.html --open",
         "build": "parcel build index.html",
         "build:js": "parcel build sdk.js",
         "serve": "serve dist"
